# Trabalho-Final-Compiladores

./: README.md  exemplo1.txt  main.py
input/: parser_table.xml  rules.in
lexer/: FiniteAutomato.py  FiniteAutomaton.py  Indetermination.py  Lexer.py
parser/: Parser.py  PushownAutomaton.py  Table.py
parser/table_generator/linux/: .gitignore  CMakeLists.txt  README.md  c89.url.txt  env.cmd  grammar.txt  input.txt  tools.sh
parser/table_generator/linux/gui/: Attribute.py  Automaton.py  Editor.py  GuiConfig.py  ParseTable.py
parser/table_generator/linux/src/: common.h  help.cpp  main.cpp
parser/table_generator/linux/src/automata/: PushDownAutomaton.cpp  PushDownAutomaton.h
parser/table_generator/linux/src/display/: display.cpp  steps.cpp  steps.h
parser/table_generator/linux/src/grammar/: Grammar.cpp  Grammar.h  GrammarReader.cpp  GrammarReader.h
parser/table_generator/linux/src/parser/: LALRParser.h  LR0Parser.h  LR1Parser.h  LRParser.cpp  LRParser.h  SLRParser.h
parser/table_generator/linux/src/util/: BitSet.h  Formatter.h  HashSet.h  Process.h  ResourceProvider.h  TokenReader.h  TreeSet.h
parser/table_generator/windows/: run.cmd
parser/table_generator/windows/gui/: Lexer.py  Model.py  main.py
utils/: SimbolTable.py
